--- a/.gitlab-ci/.rollback.yml
+++ b/.gitlab-ci/.rollback.yml
@@ -4,8 +4,8 @@ rollback_job:
   needs:
     - job: deploy_job
   script:
-    - BUILD_VERSION=$(echo ${APP_VERSION:1} | awk -F. '{print "v"$1"."($2-1)}')
     - echo "Current application version - $APP_VERSION"
-    - PREVIOUS_VERSION=$BUILD_VERSION
+    - PREVIOUS_VERSION=$(echo ${APP_VERSION:1} | awk -F. '{print "v"$1"."($2-1)}')
+    - echo VERSION="$PREVIOUS_VERSION" > .env
     - echo "Rollback the application to a previous version ($PREVIOUS_VERSION)..."
   when: manual
